# grill-ekstraklasa

./: .gitignore  LICENSE  README.md  check_summaries.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py  wait-for-postgres.sh
backend/clubs/: admin.py  club_players_views.py  models.py  serializers.py  urls.py  views.py
backend/clubs/migrations/: 0001_initial.py
backend/comments/: admin.py  ai.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/comments/migrations/: 0001_initial.py  0002_comment_ai_response.py
backend/core/: ai.py  pagination.py  permissions.py  tests.py  urls.py  views.py
backend/data/: arkagdynia.json  koronakielce.json  lechiagdansk.json  lechpoznan.json  legiawarszawa.json  motorlublin.json  piastgliwice.json  pogonszczecin.json  radomiakradom.json  rakowczestochowa.json  termalice.json  widzew.json  wislaplock.json  zaglebielubin.json
backend/grill_ekstraklasa/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
backend/matches/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
backend/matches/migrations/: 0001_initial.py  0002_seed_club_aliases.py
backend/players/: admin.py  admin_views.py  models.py  rating_aggregates.py  serializers.py  sitemaps.py  tests.py  urls.py  views.py
backend/players/management/: __init__.py
backend/players/migrations/: 0001_initial.py  0002_delete_comment.py  (+13 more)
backend/ratings/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
docs/: README.md  (+16 more)
(+109 files in other folders)
